change description of link of website

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Random Rainbow is a cyber project born to connect queer video art and artists."
     />
     <title>Random Rainbow</title>
   </head>
